Bug 120515 - Re-pagination starts for every save (making saving quite slow)
Summary: Re-pagination starts for every save (making saving quite slow)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.beta2+
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
: 115818 (view as bug list)
Depends on:
Blocks: Repagination
  Show dependency treegraph
 
Reported: 2018-10-11 12:46 UTC by Telesto
Modified: 2019-02-16 15:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (36.45 KB, application/vnd.oasis.opendocument.text)
2018-10-11 12:47 UTC, Telesto
Details
Bibisect log (2.91 KB, text/plain)
2018-10-12 20:40 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-10-11 12:46:27 UTC
Description:
Re-pagination starts for every save (making saving quite slow)

Steps to Reproduce:
1. Open the attached file
2. Press save button or CTRL+S

Actual Results:
10 seconds

Expected Results:
5 seconds


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.2.0.0.alpha0+
Build ID: 87e3539d69626780c6d7531b725dd0d64c69e6d8
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-10-10_06:50:13
Locale: nl-NL (nl_NL); Calc: CL

but not in
5.4
Comment 1 Telesto 2018-10-11 12:47:16 UTC
Created attachment 145608 [details]
Example file
Comment 2 Telesto 2018-10-12 20:33:31 UTC
Repro with
Version: 6.1.0.0.beta2+
Build ID: 22c451df33b733440f24c1feb6380d31240d55e6
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL

but not with
6.0
Comment 3 Telesto 2018-10-12 20:40:06 UTC
Created attachment 145663 [details]
Bibisect log

Bisected to
author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-11-29 17:17:45 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-11-30 08:07:09 +0100
commit 343af46fc301a984929e071d477b8fb9f211e289 (patch)
tree aa29a1fbd386c88acb3310933bacc2d411b47c6c
parent c26f644db80e10f755911d277aac0e1d42731d29 (diff)
ODT filter: make sure we have a layout before export
It is expected that the commandline --convert-to switch gives mostly the
same result as save-as on the UI, but this was not the case for ODT, as
the convert-to case had no layout available.

As a result the explicit width of table columns or soft page-breaks were
missing from the export result in the convert-to case.

Given that Word formats already calculate the layout before export and
during crashtesting we already wait for the OnLayoutFinished even before
export, just enable calculating the layout before ODT export as well to
shrink the cmdline vs GUI differences.

[ No testcase: saving
writerperfect/qa/unit/data/writer/epubexport/table.fodt with the writer8
export filter would be a reproducer for this, but the test doesn't fail
without the fix even aftet not calling CalcLayot() via the
mustCalcLayoutOf() override, so I'm out of ideas right now how to test
this. ]

https://cgit.freedesktop.org/libreoffice/core/commit/?id=343af46fc301a984929e071d477b8fb9f211e289
Comment 4 Telesto 2018-10-27 15:50:12 UTC
@Buovjaga,
I bisected this a while ago; a conformation would be nice. And the re-pagination stuff is slightly annoying (I probably reported this in all sort variants already :-)
Comment 5 Buovjaga 2018-10-27 16:00:27 UTC
I see the "Repagination..." in the status bar in Windows, but not in Linux - confusing.

Adding Cc: to Miklos Vajna

Version: 6.2.0.0.alpha1+ (x64)
Build ID: 8274c4c62df5b937b3f0bec9e1eeca85f3b219d4
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-22_01:47:50
Locale: fi-FI (fi_FI); Calc: threaded
Comment 6 Miklos Vajna 2018-10-29 20:44:46 UTC
I plan to look at this.
Comment 7 Commit Notification 2018-11-06 08:13:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e83c1f0ef999bdedaf9a5d5903aa5423c40f6d95%5E%21

tdf#120515 ODT filter: relax layout requirement before export

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2018-11-08 13:16:12 UTC
@Telesto,
Could you please verify the fix with a recent master build ?
Comment 9 Telesto 2018-11-08 13:30:48 UTC
No repro with
Version: 6.2.0.0.alpha1+
Build ID: 397dd8a5f7694540f31f32759c2c915d63506ccd
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-11-07_23:58:04
Locale: nl-NL (nl_NL); Calc: CL
Comment 10 Commit Notification 2018-11-12 12:11:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/8d2abb388b0a2423c9b7e1f52373e1b06dd9786f%5E%21

tdf#120515 ODT filter: relax layout requirement before export

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Miklos Vajna 2019-02-16 15:12:52 UTC
*** Bug 115818 has been marked as a duplicate of this bug. ***