tdf#120515 ODT filter: relax layout requirement before export

This reverts commit 343af46fc301a984929e071d477b8fb9f211e289 (ODT
filter: make sure we have a layout before export, 2017-11-29) as it
causes a performance problem with large documents (see bugreport).

I added it initially for the EPUB export, but there this is no longer
needed as commit 3ed8466b55ace15a28761e06b6bb76ebd8758106 (EPUB export,
fixed layout: switch to a metafile-based approach, 2017-12-01) switched
to the better metafile-based approach.

(cherry picked from commit e83c1f0ef999bdedaf9a5d5903aa5423c40f6d95)

Change-Id: Ie404e23db77b8ded1d29f42b6279a3cd06a574b5